--- a/app/forget-password/index.html
+++ b/app/forget-password/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Forgot Password</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <!-- Lucide & Toastify -->
+  <script src="https://unpkg.com/lucide@latest"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
   <style>
     body { 
       margin: 0; 
@@ -31,12 +36,14 @@
       position: relative; 
       margin-bottom: 20px; 
     }
-    .input-group i { 
+    .input-group svg { 
       position: absolute; 
       left: 12px; 
       top: 50%; 
       transform: translateY(-50%); 
-      color: #01009C; 
+      color: #0069ff; 
+      width: 18px; 
+      height: 18px;
     }
     .input-group input,
     .btn {
@@ -49,31 +56,36 @@
     .input-group input {
       border: 1px solid #ccc;
       background: #f9f9f9;
-      padding-left: 40px; /* keep space for icon */
+      padding-left: 40px; /* space for icon */
     }
     .btn {
       border: none;
       cursor: pointer;
       margin-bottom: 15px;
+      transition: 0.3s;
     }
     .btn-send { 
-      background: #01009C; 
-      color: #000; 
+      background: #0069ff; 
+      color: #fff; 
       font-weight: bold; 
+    }
+    .btn-send:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
     }
     .btn-contact { 
       background: #eee; 
       border: 1px solid #ccc; 
       color: #000; 
     }
-    #responseBox { 
-      font-size: 14px; 
-      margin-top: 15px; 
-      padding: 10px; 
-      border-radius: 6px; 
-      background: #f4f4f4; 
-      color: #333; 
-      display: none; 
+    .signup-text {
+      text-align: center;
+      font-size: 14px;
+      margin-top: 15px;
+    }
+    .back-link {
+      color: #0069ff;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -81,38 +93,69 @@
   <div class="container">
     <h1>Forgot Password</h1>
 
-    <div id="responseBox"></div>
-    <br>
-
     <label for="email">Enter your email</label>
     <div class="input-group">
-      <i class="fa fa-envelope"></i>
+      <i data-lucide="mail"></i>
       <input type="text" id="email" placeholder="you@example.com">
     </div>
 
-    <button class="btn btn-send" onclick="sendResetCode()">Reset Password</button>
-    <button class="btn btn-contact">Contact us</button>
+    <button class="btn btn-send" id="resetBtn" onclick="sendResetCode()">Reset Password</button>
+    <button class="btn btn-contact" onclick="window.location.href='support-page'">Contact us</button>
 
     <div class="signup-text">
-  <span class="back-link" onclick="window.location.href='/app'">⬅ Back to Sign in</span>
-</div>
+      <span class="back-link" onclick="window.location.href='index.html'">⬅ Back to Sign in</span>
+    </div>
   </div>
 
   <script>
+    if (window.lucide) lucide.createIcons();
+
+    // ✅ Toastify function
+    function showToast(message, type = "info") {
+      let bgColor = "#333";
+      let icon = "info";
+      if (type === "success") { bgColor = "#16a34a"; icon = "check-circle"; }
+      if (type === "error") { bgColor = "#dc2626"; icon = "alert-circle"; }
+      if (type === "info") { bgColor = "#2563eb"; icon = "info"; }
+
+      const el = document.createElement("div");
+      el.className = "flex items-center space-x-2 text-white";
+      el.innerHTML = `<i data-lucide="${icon}" class="w-4 h-4"></i><span>${message}</span>`;
+      if (window.lucide) lucide.createIcons({ icons: [icon] });
+
+      Toastify({
+        node: el,
+        duration: 3000,
+        gravity: "top",
+        position: "center",
+        close: false,
+        stopOnFocus: true,
+        style: {
+          background: bgColor,
+          borderRadius: "10px",
+          boxShadow: "0 2px 10px rgba(0,0,0,0.15)",
+          padding: "10px 16px"
+        }
+      }).showToast();
+    }
+
+    // ✅ Send Reset Code Function
     function sendResetCode() {
       const email = document.getElementById("email").value.trim();
-      const responseBox = document.getElementById("responseBox");
+      const resetBtn = document.getElementById("resetBtn");
 
-      if (!email) {
-        responseBox.style.display = "block";
-        responseBox.style.color = "red";
-        responseBox.textContent = "⚠️ Please enter your email.";
+      if (!navigator.onLine) {
+        showToast("No Internet Connection", "error");
         return;
       }
 
-      responseBox.style.display = "block";
-      responseBox.style.color = "#333";
-      responseBox.textContent = "⏳ Sending reset code...";
+      if (!email) {
+        showToast("Please enter your email.", "error");
+        return;
+      }
+
+      resetBtn.textContent = "Resetting...";
+      resetBtn.disabled = true;
 
       fetch("https://datapaddy.com.ng/api/forgot-password", {
         method: "POST",
@@ -121,21 +164,29 @@
       })
       .then(res => res.json())
       .then(data => {
-        responseBox.style.display = "block";
-        responseBox.textContent = data.message || "Unknown response";
-
         if (data.status) {
+          showToast(data.message || "Reset link sent!", "success");
           localStorage.setItem("reset_email", email);
-          setTimeout(() => { window.location.href = "reset-password"; }, 1500);
+          setTimeout(() => window.location.href = "reset-password", 1000);
         } else {
-          responseBox.style.color = "red";
+          showToast(data.message || "Unable to send reset link.", "error");
         }
       })
       .catch(err => {
-        responseBox.style.color = "red";
-        responseBox.textContent = "Error: " + err;
+        showToast("Error: " + err.message, "error");
+      })
+      .finally(() => {
+        resetBtn.textContent = "Reset Password";
+        resetBtn.disabled = false;
       });
     }
+
+    // Disable inspect / copy
+    document.addEventListener('contextmenu', e => e.preventDefault());
+    ['copy','cut','paste','selectstart'].forEach(evt => document.addEventListener(evt, e => e.preventDefault()));
+    document.addEventListener('keydown', e => {
+      if (e.ctrlKey && ['u','s','a'].includes(e.key.toLowerCase())) e.preventDefault();
+    });
   </script>
 </body>
 </html>
