Change base color from #01009C to #0069ff

--- a/app/airtime/index.html
+++ b/app/airtime/index.html
@@ -10,7 +10,7 @@
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 <style>
-:root { --base-color: #01009C; }
+:root { --base-color: #0069ff; }
 .bg-base { background-color: var(--base-color); }
 .text-base { color: var(--base-color); }
 .border-base { border-color: var(--base-color); }
