--- a/app/transactions/index.html
+++ b/app/transactions/index.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap Icons CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
-    :root { --base-color: #01009C; }
+    :root { --base-color: #0069ff; }
     .text-base { color: var(--base-color); }
     .border-base { border-color: var(--base-color); }
   </style>
