Add favicon link to index.html

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,9 @@
 <script src="https://unpkg.com/lucide@latest"></script>
 <!-- Preloader -->
 <link rel="stylesheet" href="/assets/preloader.css">
+  <!-- Favicon -->
+<link rel="icon" type="image/png" href="/favicon.png">
+  
 <style>
   body { margin:0; font-family:'Segoe UI', sans-serif; background:#fff; color:#000; }
   .container { max-width:400px; margin:auto; padding:20px; }
