--- a/index.html
+++ b/index.html
@@ -363,48 +363,106 @@
     </section>
 
 
-            <section id="contact" class="contact-section">
+            <section id="download" class="download-section">
   <div class="container">
-    <div class="contact-info" style="text-align: left;">
+    <div class="download-info" style="text-align: left;">
       <h3>Ready to get started with Platrlat?</h3>
       <p>
-        We’re excited to help you buy data, recharge airtime, pay bills, send payouts, and use secure cards. 
-        Let’s discuss how Platrlat can power your digital payments.
+        Experience seamless payments — buy data, recharge airtime, pay bills, send payouts, and use secure cards — all in one app.  
+        Download Platrlat today!
       </p>
-      <div class="contact-methods" style="display: flex; flex-direction: column; align-items: flex-start; gap: 15px; text-align: left;">
 
-  <!-- Email -->
-  <div class="contact-method" style="display: flex; align-items: center; gap: 10px;">
-    <div class="method-icon"><i class="fa-regular fa-envelope"></i></div>
-    <div class="method-info">
-      <span class="method-label">Email</span><br>
-      <a href="mailto:help@platr.lat" class="method-value">help@platr.lat</a>
-    </div>
-  </div>
+      <div class="download-buttons" style="display: flex; align-items: center; gap: 20px; margin-top: 20px; flex-wrap: wrap;">
+        <!-- Google Play -->
+        <div onclick="openModal('playstoreModal')" style="cursor: pointer;">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" 
+               alt="Get it on Google Play" 
+               style="height: 60px;">
+        </div>
 
-  <!-- Phone -->
-  <div class="contact-method" style="display: flex; align-items: center; gap: 10px;">
-    <div class="method-icon"><i class="fa-solid fa-phone"></i></div>
-    <div class="method-info">
-      <span class="method-label">Phone</span><br>
-      <a href="tel:+2348136874701" class="method-value">+234 813 687 4701</a>
-    </div>
-  </div>
-
-  <!-- Location -->
-  <div class="contact-method" style="display: flex; align-items: center; gap: 10px;">
-    <div class="method-icon"><i class="fa-solid fa-location-dot"></i></div>
-    <div class="method-info">
-      <span class="method-label">Location</span><br>
-      <span class="method-value">Lagos, Nigeria</span>
-    </div>
-
-      </div>
+        <!-- App Store -->
+        <div onclick="openModal('appstoreModal')" style="cursor: pointer;">
+          <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" 
+               alt="Download on the App Store" 
+               style="height: 60px;">
         </div>
       </div>
     </div>
   </div>
 </section>
+
+<!-- Google Play Modal -->
+<div id="playstoreModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal('playstoreModal')">&times;</span>
+    <iframe src="playstore.html" style="width:100%; height:80vh; border:none;"></iframe>
+  </div>
+</div>
+
+<!-- App Store Modal -->
+<div id="appstoreModal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeModal('appstoreModal')">&times;</span>
+    <iframe src="appstore.html" style="width:100%; height:80vh; border:none;"></iframe>
+  </div>
+</div>
+
+<!-- Modal Styling -->
+<style>
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0,0,0,0.7);
+    animation: fadeIn 0.3s ease-in-out;
+  }
+
+  .modal-content {
+    background-color: #fff;
+    margin: 5% auto;
+    padding: 0;
+    border-radius: 12px;
+    width: 90%;
+    max-width: 700px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    animation: slideUp 0.4s ease;
+  }
+
+  .close {
+    color: #333;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    margin: 10px 20px;
+    cursor: pointer;
+  }
+
+  .close:hover {
+    color: red;
+  }
+
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+
+  @keyframes slideUp {
+    from {transform: translateY(50px); opacity: 0;}
+    to {transform: translateY(0); opacity: 1;}
+  }
+
+  @media (max-width: 600px) {
+    .download-buttons {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+</style>
 
 
 <footer class="footer" style="text-align: left;">
@@ -451,6 +509,26 @@
       navMenu.classList.toggle('active');
     });
   </script>
+  <!-- Modal Script -->
+<script>
+  function openModal(id) {
+    document.getElementById(id).style.display = 'block';
+  }
+
+  function closeModal(id) {
+    document.getElementById(id).style.display = 'none';
+  }
+
+  // Close modal if user clicks outside content
+  window.onclick = function(event) {
+    const modals = document.querySelectorAll('.modal');
+    modals.forEach(modal => {
+      if (event.target == modal) {
+        modal.style.display = 'none';
+      }
+    });
+  }
+</script>
 
     <script src="assets/js/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
