--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     </section>
 
 
-            <section id="download" class="download-section">
+ <section id="download" class="download-section">
   <div class="container">
     <div class="download-info" style="text-align: left;">
       <h3>Ready to get started with Platrlat?</h3>
@@ -372,19 +372,20 @@
         Download Platrlat today!
       </p>
 
-      <div class="download-buttons" style="display: flex; align-items: center; gap: 20px; margin-top: 20px; flex-wrap: wrap;">
+      <div class="download-buttons" 
+           style="display: flex; align-items: center; gap: 15px; margin-top: 15px; justify-content: flex-start;">
         <!-- Google Play -->
         <div onclick="openModal('playstoreModal')" style="cursor: pointer;">
           <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" 
                alt="Get it on Google Play" 
-               style="height: 60px;">
+               style="height: 45px;">
         </div>
 
         <!-- App Store -->
         <div onclick="openModal('appstoreModal')" style="cursor: pointer;">
           <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" 
                alt="Download on the App Store" 
-               style="height: 60px;">
+               style="height: 45px;">
         </div>
       </div>
     </div>
@@ -393,17 +394,17 @@
 
 <!-- Google Play Modal -->
 <div id="playstoreModal" class="modal">
-  <div class="modal-content">
+  <div class="modal-content bottom-popup">
     <span class="close" onclick="closeModal('playstoreModal')">&times;</span>
-    <iframe src="playstore.html" style="width:100%; height:80vh; border:none;"></iframe>
+    <iframe src="playstore.html" style="width:100%; height:50vh; border:none;"></iframe>
   </div>
 </div>
 
 <!-- App Store Modal -->
 <div id="appstoreModal" class="modal">
-  <div class="modal-content">
+  <div class="modal-content bottom-popup">
     <span class="close" onclick="closeModal('appstoreModal')">&times;</span>
-    <iframe src="appstore.html" style="width:100%; height:80vh; border:none;"></iframe>
+    <iframe src="appstore.html" style="width:100%; height:50vh; border:none;"></iframe>
   </div>
 </div>
 
@@ -414,32 +415,36 @@
     position: fixed;
     z-index: 999;
     left: 0;
-    top: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.6);
     animation: fadeIn 0.3s ease-in-out;
   }
 
-  .modal-content {
-    background-color: #fff;
-    margin: 5% auto;
-    padding: 0;
-    border-radius: 12px;
-    width: 90%;
+  .bottom-popup {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     max-width: 700px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    margin: 0 auto;
+    background: #fff;
+    border-radius: 20px 20px 0 0;
+    box-shadow: 0 -5px 20px rgba(0,0,0,0.3);
+    overflow: hidden;
     animation: slideUp 0.4s ease;
   }
 
   .close {
+    position: absolute;
+    right: 15px;
+    top: 10px;
     color: #333;
-    float: right;
-    font-size: 28px;
+    font-size: 24px;
     font-weight: bold;
-    margin: 10px 20px;
     cursor: pointer;
+    z-index: 1000;
   }
 
   .close:hover {
@@ -452,14 +457,13 @@
   }
 
   @keyframes slideUp {
-    from {transform: translateY(50px); opacity: 0;}
-    to {transform: translateY(0); opacity: 1;}
+    from {transform: translateY(100%);}
+    to {transform: translateY(0);}
   }
 
   @media (max-width: 600px) {
-    .download-buttons {
-      flex-direction: column;
-      align-items: flex-start;
+    .download-buttons img {
+      height: 40px;
     }
   }
 </style>
@@ -509,7 +513,7 @@
       navMenu.classList.toggle('active');
     });
   </script>
-  <!-- Modal Script -->
+<!-- Modal Script -->
 <script>
   function openModal(id) {
     document.getElementById(id).style.display = 'block';
@@ -519,16 +523,17 @@
     document.getElementById(id).style.display = 'none';
   }
 
-  // Close modal if user clicks outside content
+  // Close modal if user clicks outside the bottom popup
   window.onclick = function(event) {
     const modals = document.querySelectorAll('.modal');
     modals.forEach(modal => {
-      if (event.target == modal) {
+      const content = modal.querySelector('.modal-content');
+      if (event.target === modal && !content.contains(event.target)) {
         modal.style.display = 'none';
       }
     });
   }
-</script>
+</script>           
 
     <script src="assets/js/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
