Replace external app store images with local ones

--- a/index.html
+++ b/index.html
@@ -376,14 +376,14 @@
            style="display: flex; align-items: center; gap: 15px; margin-top: 15px; justify-content: flex-start;">
         <!-- Google Play -->
         <div onclick="openModal('playstoreModal')" style="cursor: pointer;">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" 
+          <img src="/img/google_play.png" 
                alt="Get it on Google Play" 
                style="height: 45px;">
         </div>
 
         <!-- App Store -->
         <div onclick="openModal('appstoreModal')" style="cursor: pointer;">
-          <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" 
+          <img src="/img/apple_store.png" 
                alt="Download on the App Store" 
                style="height: 45px;">
         </div>
