Refactor appstore.html layout and styles

--- a/appstore.html
+++ b/appstore.html
@@ -5,10 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Install Platrlat PWA on iOS</title>
 
-<!-- Icons & Toastify -->
+<!-- Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
 
 <style>
@@ -20,119 +18,100 @@
   }
 
   .container {
-    max-width: 480px;
+    max-width: 900px;
     margin: 0 auto;
-    padding: 25px 20px 90px;
-    text-align: center;
+    padding: 40px 20px;
   }
 
   .logo {
     font-weight: bold;
-    font-size: 22px;
+    font-size: 24px;
     color: #0069ff;
-    margin-bottom: 10px;
+    text-align: center;
+    margin-bottom: 8px;
   }
 
   h2 {
-    font-size: 20px;
-    margin-bottom: 10px;
+    text-align: center;
+    font-size: 22px;
     color: #222;
+    margin-bottom: 10px;
   }
 
   p.intro {
-    color: #555;
+    text-align: center;
     font-size: 15px;
-    margin-bottom: 30px;
+    color: #555;
+    margin-bottom: 40px;
     line-height: 1.6;
   }
 
-  /* --- Step Layout --- */
+  /* Step layout: image left, text right */
   .step {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 35px;
-    gap: 15px;
+    background: #f9f9f9;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 3px 12px rgba(0,0,0,0.05);
+    margin-bottom: 25px;
+    gap: 20px;
+    transition: transform 0.2s ease;
   }
 
-  .step:nth-child(even) {
-    flex-direction: row-reverse;
+  .step:hover {
+    transform: scale(1.02);
   }
 
   .step img {
     width: 45%;
-    height: auto;
     border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
   }
 
   .step-content {
     width: 55%;
-    text-align: left;
-  }
-
-  .step:nth-child(even) .step-content {
-    text-align: right;
   }
 
   .step h3 {
-    font-size: 17px;
+    font-size: 18px;
     color: #0069ff;
-    margin-bottom: 6px;
+    margin-bottom: 8px;
   }
 
   .step p {
+    font-size: 15px;
     color: #444;
-    font-size: 14px;
     line-height: 1.5;
   }
 
+  /* Alternate step layout for even rows (image right) */
+  .step:nth-child(even) {
+    flex-direction: row-reverse;
+  }
+
+  /* Note text */
   .note {
     font-size: 13px;
     color: #777;
-    margin-top: 15px;
+    margin-top: 30px;
     text-align: center;
   }
 
-  /* --- Button --- */
-  .btn {
-    background: #0069ff;
-    color: #fff;
-    border: none;
-    padding: 16px;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    border-radius: 0;
-    transition: background 0.3s;
-  }
-
-  .btn:hover {
-    background: #0050d6;
-  }
-
-  .icon {
-    color: #0069ff;
-    margin-bottom: 10px;
-  }
-
-  /* --- Responsive --- */
-  @media (max-width: 600px) {
+  /* Responsive */
+  @media (max-width: 700px) {
     .step {
       flex-direction: column !important;
-      text-align: center !important;
+      text-align: center;
     }
+
     .step img, .step-content {
       width: 100%;
-      text-align: center !important;
     }
   }
 
-  /* Prevent selection */
+  /* Disable text/image copy */
   body, img {
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -144,13 +123,13 @@
 <body>
   <div class="container">
     <div class="logo">PLATRlat</div>
-    <i data-lucide="smartphone" class="icon" width="60" height="60"></i>
+    <i data-lucide="smartphone" width="60" height="60" style="color:#0069ff;display:block;margin:0 auto 10px;"></i>
     <h2>Install Platrlat on iOS</h2>
-    <p class="intro">Easily install Platrlat on your iPhone or iPad home screen to enjoy a full app experience right from Safari.</p>
+    <p class="intro">Follow these simple steps to install Platrlat on your iPhone or iPad home screen. It works just like a native app!</p>
 
     <!-- Step 1 -->
     <div class="step">
-      <img src="https://i.imgur.com/WWwQzZB.png" alt="Safari browser open">
+      <img src="/assets/IMG-20251024-WA0310.jpg" alt="Step 1">
       <div class="step-content">
         <h3>Step 1</h3>
         <p>Open Platrlat in your Safari browser.</p>
@@ -159,16 +138,16 @@
 
     <!-- Step 2 -->
     <div class="step">
-      <img src="https://i.imgur.com/5M4sY3v.png" alt="Share button">
+      <img src="/assets/IMG-20251024-WA0311.jpg" alt="Step 2">
       <div class="step-content">
         <h3>Step 2</h3>
-        <p>Tap the <strong>Share</strong> button <i class="fa-solid fa-square-arrow-up"></i> at the bottom of your screen.</p>
+        <p>Tap the <strong>Share</strong> icon <i class="fa-solid fa-square-arrow-up"></i> at the bottom of your screen.</p>
       </div>
     </div>
 
     <!-- Step 3 -->
     <div class="step">
-      <img src="https://i.imgur.com/3pTh6Xx.png" alt="Add to Home Screen Option">
+      <img src="/assets/IMG-20251024-WA0312.jpg" alt="Step 3">
       <div class="step-content">
         <h3>Step 3</h3>
         <p>Scroll down and tap <strong>Add to Home Screen</strong>.</p>
@@ -177,24 +156,24 @@
 
     <!-- Step 4 -->
     <div class="step">
-      <img src="https://i.imgur.com/hUBnsLz.png" alt="Add confirmation">
+      <img src="/assets/IMG-20251024-WA0313.jpg" alt="Step 4">
       <div class="step-content">
         <h3>Step 4</h3>
-        <p>Tap <strong>Add</strong> in the top-right corner to finish. 🎉</p>
+        <p>Tap <strong>Add</strong> in the top-right corner to finish 🎉</p>
       </div>
     </div>
 
-    <p class="note">Once added, Platrlat will appear on your iOS home screen just like any other app.</p>
+    <p class="note">Once added, Platrlat will appear on your home screen like any other app!</p>
   </div>
-
-  <button class="btn" onclick="window.location.href='login.html'">Install Now on Login Page</button>
 
 <script>
 if (window.lucide) lucide.createIcons();
 
-// Disable inspect / copy
+// Disable inspect/copy
 document.addEventListener('contextmenu', e => e.preventDefault());
-['copy','cut','paste','selectstart'].forEach(evt => document.addEventListener(evt, e => e.preventDefault()));
+['copy','cut','paste','selectstart'].forEach(evt => 
+  document.addEventListener(evt, e => e.preventDefault())
+);
 document.addEventListener('keydown', e => {
   if (e.ctrlKey && ['u','s','a'].includes(e.key.toLowerCase())) e.preventDefault();
 });
