Refactor index.html for improved UI and functionality
Refactor HTML structure and enhance styles for better UI/UX. Update input fields and animations for improved user interaction.

--- a/app/transfer/index.html
+++ b/app/transfer/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Bank Transfer</title>
+
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -15,11 +16,19 @@
 .bg-base { background-color: var(--base-color); }
 .text-base { color: var(--base-color); }
 .border-base { border-color: var(--base-color); }
-.hover\:bg-base:hover { background-color: var(--base-color); }
-@keyframes slide-up { from { transform: translateY(100%); } to { transform: translateY(0); } }
-.animate-slide-up { animation: slide-up 0.3s ease-out; }
 
-/* Horizontal bank list */
+@keyframes fadeInUp {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+.animate-fadeInUp { animation: fadeInUp 0.4s ease-out; }
+
+@keyframes pulseOnce {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.03); }
+}
+.animate-pulseOnce { animation: pulseOnce 0.6s ease-in-out; }
+
 .bank-scroll {
   display: flex;
   gap: 12px;
@@ -27,15 +36,15 @@
   scroll-snap-type: x mandatory;
   padding-bottom: 10px;
 }
-.bank-scroll::-webkit-scrollbar {
-  display: none;
-}
+.bank-scroll::-webkit-scrollbar { display: none; }
+
 .bank-item {
   flex: 0 0 auto;
   scroll-snap-align: start;
   width: 90px;
   text-align: center;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 .bank-item img {
   width: 50px;
@@ -48,8 +57,9 @@
 }
 .bank-item.selected img {
   border-color: var(--base-color);
-  box-shadow: 0 0 0 2px var(--base-color);
+  box-shadow: 0 0 0 3px var(--base-color);
 }
+.bank-item:hover { transform: translateY(-4px); }
 .bank-item span {
   display: block;
   margin-top: 4px;
@@ -73,17 +83,21 @@
     <div class="w-8 h-8"></div>
   </div>
 
-  <!-- Main Form -->
+  <!-- Main Content -->
   <div class="flex-1 overflow-y-auto px-4 mt-4 space-y-4">
+    
     <!-- Bank Search -->
-    <input type="text" v-model="search" placeholder="Search bank..." class="w-full border rounded-lg px-3 py-3 outline-none" />
-
+    <input type="text" v-model="search" placeholder="Search bank..." 
+      class="w-full border rounded-lg px-3 py-3 outline-none transition focus:ring-2 focus:ring-base" />
     <!-- Scrollable Bank List -->
     <div class="bank-scroll mt-2">
       <div v-for="bank in filteredBanks" :key="bank.bankCode"
            :class="['bank-item', selectedBank && selectedBank.bankCode === bank.bankCode ? 'selected' : '']"
            @click="selectBank(bank)">
-        <img :src="bank.logo_url || 'https://via.placeholder.com/50'" />
+        <img 
+          :src="bank.logo_url || backupLogo"
+          @error="onImageError($event)"
+        />
         <span>{{ bank.bankName }}</span>
       </div>
     </div>
@@ -98,32 +112,37 @@
       </svg>
     </div>
 
-    <!-- Account Name -->
-    <div v-if="accountName" class="border rounded-lg px-3 py-3 bg-gray-50 animate-slide-up">
-      <p class="text-sm text-gray-600">Account Name:</p>
-      <p class="font-semibold text-green-600">{{ accountName }}</p>
-    </div>
+    <!-- Account Name Display (as text only) -->
+    <transition name="fade">
+      <div v-if="accountName" 
+        class="rounded-lg px-3 py-3 bg-green-50 text-green-700 font-semibold text-left animate-fadeInUp animate-pulseOnce shadow-sm">
+        {{ accountName }}
+      </div>
+    </transition>
 
     <!-- Amount -->
     <div class="border rounded-lg px-3">
-      <input type="number" placeholder="Amount (₦)" v-model="amount" class="flex-1 py-3 outline-none" />
+      <input type="number" placeholder="Amount (₦)" v-model="amount" 
+        class="flex-1 py-3 outline-none transition focus:ring-2 focus:ring-base" />
     </div>
+
   </div>
 
   <!-- Continue Button -->
   <div class="border-t bg-white p-4">
-    <button @click="proceedTransfer" class="w-full py-3 bg-base text-white rounded-lg font-medium text-lg shadow-md">
+    <button @click="proceedTransfer" 
+      class="w-full py-3 bg-base text-white rounded-lg font-medium text-lg shadow-md hover:scale-[1.02] transition-transform">
       Continue
     </button>
   </div>
 
-  <!-- Loader -->
+  <!-- Loader Overlay -->
   <div v-if="loading" class="fixed inset-0 bg-black bg-opacity-70 flex flex-col items-center justify-center z-[60]">
     <svg class="animate-spin h-12 w-12 text-white mb-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
       <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
       <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v8z"></path>
     </svg>
-    <p class="text-white text-lg font-medium">Processing...</p>
+    <p class="text-white text-lg font-medium animate-pulse">Processing...</p>
   </div>
 
 </div>
@@ -142,14 +161,15 @@ createApp({
       verifying: false,
       amount: '',
       loading: false,
-    }
+      backupLogo: "https://firebasestorage.googleapis.com/v0/b/business-banking-93cc1.appspot.com/o/bankLogos%2FEmpty%20Bank%20Logo.png?alt=media&token=c800752e-e3f0-41cf-a4bc-de2d4017ca16"
+    };
   },
   computed: {
     filteredBanks() {
       return this.banks.filter(b =>
         b.bankName.toLowerCase().includes(this.search.toLowerCase())
       );
-    }
+    },
   },
   mounted() {
     lucide.createIcons();
@@ -158,16 +178,20 @@ createApp({
   methods: {
     goBack() { window.location.href = 'home.html'; },
 
+    onImageError(e) {
+      e.target.src = this.backupLogo;
+    },
+
     async getBanks() {
       try {
         const res = await fetch('https://pulsepoint.com.ng/api/banklist');
         const data = await res.json();
-        if (data.status === 'success' || data.ok) {
+        if (data.ok || data.status === 'success') {
           this.banks = data.data || data.body?.banks || [];
         } else {
           this.toast('Failed to load banks', 'error');
         }
-      } catch (e) {
+      } catch {
         this.toast('Network error loading banks', 'error');
       }
     },
@@ -180,26 +204,27 @@ createApp({
       if (this.accountNumber.length === 10 && this.selectedBank) {
         this.verifying = true;
         this.accountName = '';
+
         try {
           const res = await fetch('https://pulsepoint.com.ng/api/verify-account', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({
               bankCode: this.selectedBank.bankCode,
-              accountNumber: this.accountNumber
-            })
+              accountNumber: this.accountNumber,
+            }),
           });
-          const data = await res.json();
 
-          // ✅ Match the structure you provided exactly
-          if (data.ok && data.body && data.body.status === 'success' && data.body.content?.accountName) {
-            this.accountName = data.body.content.accountName;
-            this.toast('Account verified successfully', 'success');
+          const data = await res.json();
+          const result = data.body || data;
+
+          if ((result.ok && result.status === 'success') && result.content?.accountName) {
+            this.accountName = result.content.accountName;
           } else {
             this.accountName = '';
-            this.toast('Coming Sooner', 'error');
+            this.toast('❌ Invalid account or not found', 'error');
           }
-        } catch (e) {
+        } catch {
           this.toast('Network error verifying account', 'error');
         } finally {
           this.verifying = false;
@@ -224,11 +249,11 @@ createApp({
         gravity: 'top',
         position: 'center',
         close: true,
-        backgroundColor: bg
+        backgroundColor: bg,
       }).showToast();
-    }
-  }
+    },
+  },
 }).mount('#app');
 </script>
 </body>
-  </html>
+</html>
